# gst-hyperspectral

./: AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac
gst/: Makefile.am
gst-libs/gst/hyperspectral/: Makefile.am  hyperspectral-format.c  hyperspectral-format.h  hyperspectral-frame.c  hyperspectral-frame.h  hyperspectral-info.c  hyperspectral-info.h  hyperspectral-mosaic.c  hyperspectral-mosaic.h  hyperspectral.h
gst/hyperspectral/: Makefile.am  gsthspecfilesink.c  gsthspecfilesink.h  gsthspecreducer.c  gsthspecreducer.h  gsthyperspectral.c  gsthyperspectraldec.c  gsthyperspectraldec.h  gsthyperspectralenc.c  gsthyperspectralenc.h
